--- a/package.json
+++ b/package.json
@@ -1,44 +1,31 @@
 {
-  "name": "mocha-app",
+  "name": "r1-internato",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@hono/zod-validator": "^0.5.0",
-    "@phosphor-icons/react": "^2.1.10",
-    "@supabase/supabase-js": "^2.89.0",
-    "hono": "4.7.7",
-    "lucide-react": "^0.510.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "^7.5.3",
-    "zod": "^3.24.3"
+    "@phosphor-icons/react": "^2.1.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.25.1",
-    "@getmocha/vite-plugins": "latest",
-    "@getmocha/users-service": "^0.0.4",
-    "@types/node": "22.14.1",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-react": "4.4.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "9.25.1",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.19",
-    "globals": "15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.31.0",
-    "vite": "^7.1.3",
-    "wrangler": "^4.33.0"
-  },
-  "scripts": {
-    "build": "tsc -b && vite build",
-    "cf-typegen": "wrangler types",
-    "check": "tsc && vite build && wrangler deploy --dry-run",
-    "dev": "vite",
-    "lint": "eslint ."
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.1.0"
   }
 }
